--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         arch: [amd64, arm64]
-        targetos: [windows, darwin, linux]
+        targetos: [darwin, linux]
     name: umee ${{ matrix.arch }} for ${{ matrix.targetos }}
     steps:
       - uses: actions/checkout@v2
