--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,14 @@
-# This is a basic workflow that is manually triggered
-
-name: umee
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+name: Build
 on: [push, pull_request]
 
-# This workflow makes x86_64 binaries for mac, windows, and linux.
-
+# This workflow makes amd64 and arm64 binaries for macOS and Linux.
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         arch: [amd64, arm64]
-        targetos: [windows, darwin, linux]
+        targetos: [darwin, linux]
     name: umee ${{ matrix.arch }} for ${{ matrix.targetos }}
     steps:
       - uses: actions/checkout@v2
@@ -36,4 +30,3 @@ jobs:
         with:
           name: umeed ${{ matrix.targetos }} ${{ matrix.arch }}
           path: cmd/umeed/umeed
-
