ci: update local testing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -149,10 +149,18 @@ jobs:
             **/**.go
             go.mod
             go.sum
-      - name: Start Local Network
+      - name: Install Starport
         run: |
-          make clean docker-localnet-build localnet-start
+          curl https://get.starport.network/starport@v0.16.2! | bash
         if: env.GIT_DIFF
+      - name: Start Local Network via Starport
+        run: |
+          starport serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
+        if: env.GIT_DIFF
+      # - name: Start Local Network
+      #   run: |
+      #     make clean docker-localnet-build localnet-start
+      #   if: env.GIT_DIFF
       - name: Test Local Network Liveness
         run: |
           ./contrib/scripts/test_localnet_liveness.sh 100 5 50 localhost
