--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -157,11 +157,8 @@ jobs:
         run: |
           starport serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
         if: env.GIT_DIFF
-      # - name: Start Local Network
-      #   run: |
-      #     make clean docker-localnet-build localnet-start
-      #   if: env.GIT_DIFF
       - name: Test Local Network Liveness
         run: |
+          sleep 2m
           ./contrib/scripts/test_localnet_liveness.sh 100 5 50 localhost
         if: env.GIT_DIFF
