--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,35 +31,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-tparse-binary
 
-  split-test-files:
+  test-cover:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Create Packages File
-        run: go list ./... > pkgs.txt
-      - name: Split Packages into Files
-        run: split -d -n l/4 pkgs.txt pkgs.txt.part.
-      - uses: actions/upload-artifact@v2
+      - uses: actions/setup-go@v2.1.3
         with:
-          name: "${{ github.sha }}-00"
-          path: ./pkgs.txt.part.00
-      - uses: actions/upload-artifact@v2
-        with:
-          name: "${{ github.sha }}-01"
-          path: ./pkgs.txt.part.01
-      - uses: actions/upload-artifact@v2
-        with:
-          name: "${{ github.sha }}-02"
-          path: ./pkgs.txt.part.02
-      - uses: actions/upload-artifact@v2
-        with:
-          name: "${{ github.sha }}-03"
-          path: ./pkgs.txt.part.03
-
-  upload-coverage-report:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
+          go-version: 1.16
       - uses: actions/checkout@v2
       - uses: technote-space/get-diff-action@v4
         with:
@@ -67,72 +44,118 @@ jobs:
             **/**.go
             go.mod
             go.sum
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ github.sha }}-00-coverage"
-        if: env.GIT_DIFF
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ github.sha }}-01-coverage"
-        if: env.GIT_DIFF
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ github.sha }}-02-coverage"
-        if: env.GIT_DIFF
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ github.sha }}-03-coverage"
-        if: env.GIT_DIFF
-      - run: |
-          cat ./*profile.out | grep -v "mode: atomic" >> coverage.txt
-        if: env.GIT_DIFF
-      - name: filter out DONTCOVER
+      - name: Test and Create Coverage Report
         run: |
-          excludelist="$(find ./ -type f -name '*.go' | xargs grep -l 'DONTCOVER')"
-          excludelist+=" $(find ./ -type f -name '*.pb.go')"
-          excludelist+=" $(find ./ -type f -name '*.pb.gw.go')"
-          excludelist+=" $(find ./ -type f -path './tests/mocks/*.go')"
-          for filename in ${excludelist}; do
-            filename=$(echo $filename | sed 's/^./github.com\/cosmos\/cosmos-sdk/g')
-            echo "Excluding ${filename} from coverage report..."
-            sed -i.bak "/$(echo $filename | sed 's/\//\\\//g')/d" coverage.txt
-          done
+          make test-unit-cover
         if: env.GIT_DIFF
       - uses: codecov/codecov-action@v1.2.1
         with:
           file: ./coverage.txt
+          fail_ci_if_error: true
         if: env.GIT_DIFF
 
-  tests:
-    runs-on: ubuntu-latest
-    needs: split-test-files
-    strategy:
-      fail-fast: false
-      matrix:
-        part: ["00", "01", "02", "03"]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2.1.3
-        with:
-          go-version: 1.16
-      - uses: technote-space/get-diff-action@v4
-        with:
-          PATTERNS: |
-            **/**.go
-            go.mod
-            go.sum
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ github.sha }}-${{ matrix.part }}"
-        if: env.GIT_DIFF
-      - name: Create Test and Coverage Report
-        run: |
-          cat pkgs.txt.part.${{ matrix.part }} | xargs go test -mod=readonly -timeout 30m -coverprofile=${{ matrix.part }}profile.out -covermode=atomic
-        if: env.GIT_DIFF
-      - uses: actions/upload-artifact@v2
-        with:
-          name: "${{ github.sha }}-${{ matrix.part }}-coverage"
-          path: ./${{ matrix.part }}profile.out
+  # split-test-files:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Create Packages File
+  #       run: go list ./... > pkgs.txt
+  #     - name: Split Packages into Files
+  #       run: split -d -n l/4 pkgs.txt pkgs.txt.part.
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-00"
+  #         path: ./pkgs.txt.part.00
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-01"
+  #         path: ./pkgs.txt.part.01
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-02"
+  #         path: ./pkgs.txt.part.02
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-03"
+  #         path: ./pkgs.txt.part.03
+
+  # upload-coverage-report:
+  #   runs-on: ubuntu-latest
+  #   needs: tests
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: technote-space/get-diff-action@v4
+  #       with:
+  #         PATTERNS: |
+  #           **/**.go
+  #           go.mod
+  #           go.sum
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-00-coverage"
+  #       if: env.GIT_DIFF
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-01-coverage"
+  #       if: env.GIT_DIFF
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-02-coverage"
+  #       if: env.GIT_DIFF
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-03-coverage"
+  #       if: env.GIT_DIFF
+  #     - run: |
+  #         cat ./*profile.out | grep -v "mode: atomic" >> coverage.txt
+  #       if: env.GIT_DIFF
+  #     - name: filter out DONTCOVER
+  #       run: |
+  #         excludelist="$(find ./ -type f -name '*.go' | xargs grep -l 'DONTCOVER')"
+  #         excludelist+=" $(find ./ -type f -name '*.pb.go')"
+  #         excludelist+=" $(find ./ -type f -name '*.pb.gw.go')"
+  #         excludelist+=" $(find ./ -type f -path './tests/mocks/*.go')"
+  #         for filename in ${excludelist}; do
+  #           filename=$(echo $filename | sed 's/^./github.com\/cosmos\/cosmos-sdk/g')
+  #           echo "Excluding ${filename} from coverage report..."
+  #           sed -i.bak "/$(echo $filename | sed 's/\//\\\//g')/d" coverage.txt
+  #         done
+  #       if: env.GIT_DIFF
+  #     - uses: codecov/codecov-action@v1.2.1
+  #       with:
+  #         file: ./coverage.txt
+  #       if: env.GIT_DIFF
+
+  # tests:
+  #   runs-on: ubuntu-latest
+  #   needs: split-test-files
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       part: ["00", "01", "02", "03"]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-go@v2.1.3
+  #       with:
+  #         go-version: 1.16
+  #     - uses: technote-space/get-diff-action@v4
+  #       with:
+  #         PATTERNS: |
+  #           **/**.go
+  #           go.mod
+  #           go.sum
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-${{ matrix.part }}"
+  #       if: env.GIT_DIFF
+  #     - name: Create Test and Coverage Report
+  #       run: |
+  #         cat pkgs.txt.part.${{ matrix.part }} | xargs go test -mod=readonly -timeout 30m -coverprofile=${{ matrix.part }}profile.out -covermode=atomic
+  #       if: env.GIT_DIFF
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: "${{ github.sha }}-${{ matrix.part }}-coverage"
+  #         path: ./${{ matrix.part }}profile.out
 
   liveness-test:
     runs-on: ubuntu-latest
