--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-tparse-binary
 
-  test-cover:
+  test-unit-cover:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v2.1.3
