--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,6 +54,29 @@ jobs:
           fail_ci_if_error: true
         if: env.GIT_DIFF
 
+  test-e2e:
+    runs-on: ubuntu-latest
+    timeout-minutes: 25
+    steps:
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.16
+      - uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v4
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+      - name: Build Docker Image
+        run: |
+          make docker-build
+        if: env.GIT_DIFF
+      - name: Test E2E
+        run: |
+          make test-e2e
+        if: env.GIT_DIFF
+
   # split-test-files:
   #   runs-on: ubuntu-latest
   #   steps:
