--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,7 +70,7 @@ jobs:
             go.sum
       - name: Build Docker Image
         run: |
-          make docker-build
+          make docker-build-debug
         if: env.GIT_DIFF
       - name: Test E2E
         run: |
