--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -201,7 +201,7 @@ jobs:
         if: env.GIT_DIFF
       - name: Start Local Network via Starport
         run: |
-          starport serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
+          starport chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
         if: env.GIT_DIFF
       - name: Test Local Network Liveness
         run: |
