build: update goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,7 +6,22 @@ before:
     - go mod tidy
 
 builds:
-  - skip: true
+  - main: ./cmd/umeed
+    id: "umeed"
+    binary: umeed
+    flags:
+      - -tags=netgo ledger
+    env:
+      - CGO_ENABLED=0
+    ldflags:
+      - -s -w -X github.com/cosmos/cosmos-sdk/version.Name=umee -X github.com/cosmos/cosmos-sdk/version.AppName=umeed -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }} -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }} -X github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger -X github.com/tendermint/tendermint/version.TMCoreSemVer={{ .Env.TM_VERSION }}
+    goos:
+      - darwin
+      - linux
+    goarch:
+      - amd64
+      - arm
+      - arm64
 
 archives:
   - format: tar.gz
