--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,7 +34,7 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-    name_template: "{{ .Binary }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    name_template: "{{ .Binary }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     files:
       - LICENSE
       - README.md
@@ -43,10 +43,10 @@ release:
   github:
     owner: umee-network
     name: umee
-  name_template: "{{.Version}} Release Notes"
+  name_template: "v{{.Version}}"
 
 checksum:
-  name_template: SHA256SUMS-{{.Version}}.txt
+  name_template: SHA256SUMS-v{{.Version}}.txt
   algorithm: sha256
 
 snapshot:
