--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,6 +54,13 @@ jobs:
           fail_ci_if_error: true
         if: env.GIT_DIFF
 
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
   test-e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 25
