--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -10,6 +10,9 @@ jobs:
   ssh-debug:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v2.1.4
+        with:
+          go-version: 1.17
       - uses: actions/checkout@v2
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
