--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -1,5 +1,8 @@
+[server]
 listen_addr = "0.0.0.0:7171"
-server_write_timeout = "20s"
+read_timeout = "20s"
+verbose_cors = true
+write_timeout = "20s"
 
 [[currency_pairs]]
 base = "ATOM"
