--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -179,6 +179,23 @@ jobs:
   #       with:
   #         name: "${{ github.sha }}-${{ matrix.part }}-coverage"
   #         path: ./${{ matrix.part }}profile.out
+  price-feeder-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v2.1.4
+        with:
+          go-version: 1.17
+      - uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v5
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+      - name: Test price-feeder
+        run: |
+          cd price-feeder && make test-unit
+        if: env.GIT_DIFF
 
   liveness-test:
     runs-on: ubuntu-latest
