--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -179,6 +179,7 @@ jobs:
   #       with:
   #         name: "${{ github.sha }}-${{ matrix.part }}-coverage"
   #         path: ./${{ matrix.part }}profile.out
+
   price-feeder-test:
     runs-on: ubuntu-latest
     steps:
@@ -190,8 +191,8 @@ jobs:
         with:
           PATTERNS: |
             **/**.go
-            go.mod
-            go.sum
+            price-feeder/go.mod
+            price-feeder/go.sum
       - name: Test price-feeder
         run: |
           cd price-feeder && make test-unit
