--- a/starport.ci.yml
+++ b/starport.ci.yml
@@ -7,6 +7,22 @@ genesis:
     staking:
       params:
         bond_denom: "uumee"
+    peggy:
+      params:
+        bridge_ethereum_address: ""
+        bridge_chain_id: ""
+        cosmos_coin_denom: ""
+        cosmos_coin_erc20_contract: ""
+    bank:
+      denom_metadata:
+        - description: "The native staking token of Umee"
+          base: "uumee"
+          display: "uumee"
+          name: "umee"
+          symbol: "UMEE"
+          denom_units:
+            - denom: "uumee"
+              exponent: 0
 accounts:
   - name: alice
     coins: ["39000000000000uumee"]
