--- a/starport.ci.yml
+++ b/starport.ci.yml
@@ -7,12 +7,12 @@ genesis:
     staking:
       params:
         bond_denom: "uumee"
-    peggy:
-      params:
-        bridge_ethereum_address: ""
-        bridge_chain_id: ""
-        cosmos_coin_denom: ""
-        cosmos_coin_erc20_contract: ""
+    # peggy:
+    #   params:
+    #     bridge_ethereum_address: ""
+    #     bridge_chain_id: ""
+    #     cosmos_coin_denom: ""
+    #     cosmos_coin_erc20_contract: ""
     bank:
       denom_metadata:
         - description: "The native staking token of Umee"
