--- a/price-feeder/.vscode/launch.json
+++ b/price-feeder/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "args": ["price-feeder.example.toml", "valAddr", "voterAddr", "chain-id", "key-backend-type", "key-folder-location", "tmrpc-endpoint","tmrpc-timeout","pass phrases"],
+            "args": ["price-feeder.example.toml", "valAddr", "voterAddr", "chain-id", "key-backend-type", "key-folder-location", "tmrpc-endpoint", "grpc-endpoint", "tmrpc-timeout","pass-phrases"],
             "program": "main.go"
         }
     ]
