--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -19,3 +19,18 @@ providers = [
   "binance",
 ]
 quote = "USD"
+
+[account]
+from = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
+validator = "umeevalcons14rjlkfzp56733j5l5nfk6fphjxymgf8mj04d5p"
+chain_id = "umee-local-testnet"
+
+[key_ring]
+backend = "test"
+dir = "/Users/usrname/.umee"
+pass = "salmon swamp front quit borrow rebuild indoor print adult marble market catch length lumber tone pluck method extra tent aim trigger truly arrest attract"
+
+[rpc]
+tmrpc_endpoint = "http://localhost:26657"
+grpc_endpoint = "localhost:9090"
+rpc_timeout = "100"
