--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -21,7 +21,7 @@ providers = [
 quote = "USD"
 
 [account]
-from = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
+address = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
 validator = "umeevalcons14rjlkfzp56733j5l5nfk6fphjxymgf8mj04d5p"
 chain_id = "umee-local-testnet"
 
@@ -34,3 +34,6 @@ pass = "salmon swamp front quit borrow rebuild indoor print adult marble market 
 tmrpc_endpoint = "http://localhost:26657"
 grpc_endpoint = "localhost:9090"
 rpc_timeout = "100"
+
+[gas]
+adjustment = "1.5"
