--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -1,3 +1,5 @@
+gas_adjustment = "1.5"
+
 [server]
 listen_addr = "0.0.0.0:7171"
 read_timeout = "20s"
@@ -27,13 +29,10 @@ chain_id = "umee-local-testnet"
 
 [key_ring]
 backend = "test"
-dir = "/Users/usrname/.umee"
+dir = "/Users/adamwozniak/.umee"
 pass = "salmon swamp front quit borrow rebuild indoor print adult marble market catch length lumber tone pluck method extra tent aim trigger truly arrest attract"
 
 [rpc]
 tmrpc_endpoint = "http://localhost:26657"
 grpc_endpoint = "localhost:9090"
 rpc_timeout = "100"
-
-[gas]
-adjustment = "1.5"
