--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -30,7 +30,7 @@ chain_id = "umee-local-testnet"
 [key_ring]
 backend = "test"
 dir = "/Users/usrname/.umee"
-pass = "salmon swamp front quit borrow rebuild indoor print adult marble market catch length lumber tone pluck method extra tent aim trigger truly arrest attract"
+pass = "keyringPassword"
 
 [rpc]
 tmrpc_endpoint = "http://localhost:26657"
