--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -27,7 +27,7 @@ address = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
 chain_id = "umee-local-testnet"
 validator = "umeevaloper12tysz6mzrawenca2t3t7ltym4hfjj8a5upsn2k"
 
-[key_ring]
+[keyring]
 backend = "test"
 dir = "/Users/username/.umee"
 pass = "keyringPassword"
