--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -9,16 +9,15 @@ write_timeout = "20s"
 [[currency_pairs]]
 base = "ATOM"
 providers = [
-  "kraken",
   "binance",
 ]
-quote = "USD"
+quote = "USDT"
 
 [[currency_pairs]]
-base = "UMEE"
+base = "ATOM"
 providers = [
   "kraken",
-  "binance",
+  "osmosis",
 ]
 quote = "USD"
 
@@ -27,7 +26,7 @@ address = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
 chain_id = "umee-local-testnet"
 validator = "umeevaloper12tysz6mzrawenca2t3t7ltym4hfjj8a5upsn2k"
 
-[key_ring]
+[keyring]
 backend = "test"
 dir = "/Users/username/.umee"
 pass = "keyringPassword"
