--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,4 +4,4 @@
 # most precedence.
 
 # Primary repo maintainers
-*       @alexanderbez @toteki @adamewozniak
+*       @alexanderbez @toteki @adamewozniak @facundomedica
