--- a/.mergify.yml
+++ b/.mergify.yml
@@ -18,16 +18,7 @@ pull_request_rules:
           {{ title }} (#{{ number }})
           {{ body }}
 
-  - name: Backport patches to release/v0.3.x branch
-    conditions:
-      - base=main
-      - label=S:backport/v0.3.x
-    actions:
-      backport:
-        branches:
-          - release/v0.3.x
-
-  - name: Backport patches to release/v0.5.x branch
+  - name: Backport patches to the release/v0.5.x branch
     conditions:
       - base=main
       - label=S:backport/v0.5.x
@@ -35,3 +26,12 @@ pull_request_rules:
       backport:
         branches:
           - release/v0.5.x
+
+  - name: Backport patches to the release/v0.6.x branch
+    conditions:
+      - base=main
+      - label=S:backport/v0.6.x
+    actions:
+      backport:
+        branches:
+          - release/v0.6.x
