--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -7,26 +7,26 @@ on:
       - release/**
 
 jobs:
-  cleanup-runs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: rokroskar/workflow-run-cleanup-action@master
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-    if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/main'"
+  # cleanup-runs:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: rokroskar/workflow-run-cleanup-action@master
+  #       env:
+  #         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+  #   if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/main'"
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-go@v2.1.5
-        with:
-          go-version: 1.16
-      - name: Install runsim
-        run: export GO111MODULE="on" && go get github.com/cosmos/tools/cmd/runsim@v1.0.0
-      - uses: actions/cache@v2.1.7
-        with:
-          path: ~/go/bin
-          key: ${{ runner.os }}-go-tparse-binary
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/setup-go@v2.1.5
+  #       with:
+  #         go-version: 1.16
+  #     - name: Install runsim
+  #       run: export GO111MODULE="on" && go get github.com/cosmos/tools/cmd/runsim@v1.0.0
+  #     - uses: actions/cache@v2.1.7
+  #       with:
+  #         path: ~/go/bin
+  #         key: ${{ runner.os }}-go-tparse-binary
 
   test-sim-nondeterminism:
     runs-on: ubuntu-latest
