--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -7,13 +7,13 @@ on:
       - release/**
 
 jobs:
-  # cleanup-runs:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: rokroskar/workflow-run-cleanup-action@master
-  #       env:
-  #         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-  #   if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/main'"
+  cleanup-runs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: rokroskar/workflow-run-cleanup-action@master
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/main'"
 
   # build:
   #   runs-on: ubuntu-latest
