--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -15,20 +15,20 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/main'"
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/setup-go@v2.1.5
-  #       with:
-  #         go-version: 1.16
-  #     - name: Install runsim
-  #       run: export GO111MODULE="on" && go get github.com/cosmos/tools/cmd/runsim@v1.0.0
-  #     - uses: actions/cache@v2.1.7
-  #       with:
-  #         path: ~/go/bin
-  #         key: ${{ runner.os }}-go-tparse-binary
+  install-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v2.1.5
+        with:
+          go-version: 1.17
+      - name: Install runsim
+        run: export GO111MODULE="on" && go get github.com/cosmos/tools/cmd/runsim@v1.0.0
+      - uses: actions/cache@v2.1.7
+        with:
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-tparse-binary
 
-  test-sim-nondeterminism:
+  test-sim-non-determinism:
     runs-on: ubuntu-latest
     timeout-minutes: 25
     steps:
@@ -45,4 +45,28 @@ jobs:
       - name: Test application non-determinism
         run: |
           make test-sim-non-determinism
+        if: env.GIT_DIFF
+
+  test-sim-multi-seed-short:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - uses: actions/setup-go@v2.1.5
+        with:
+          go-version: 1.17
+      - uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v6.0.1
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+      - uses: actions/cache@v2.1.7
+        with:
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-runsim-binary
+        if: env.GIT_DIFF
+      - name: test-sim-multi-seed-short
+        run: |
+          make test-sim-multi-seed-short
         if: env.GIT_DIFF
