--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -49,7 +49,7 @@ jobs:
 
   test-sim-multi-seed-short:
     runs-on: ubuntu-latest
-    needs: Build
+    needs: install-dependencies
     steps:
       - uses: actions/setup-go@v2.1.5
         with:
