--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           go-version: 1.17
       - name: Install runsim
-        run: export GO111MODULE="on" && go get github.com/cosmos/tools/cmd/runsim@v1.0.0
+        run: export GO111MODULE="on" && go install github.com/cosmos/tools/cmd/runsim@v1.0.0
       - uses: actions/cache@v2.1.7
         with:
           path: ~/go/bin
