--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/cache@v2.1.7
         with:
           path: ~/go/bin
-          key: ${{ runner.os }}-go-tparse-binary
+          key: ${{ runner.os }}-go-runsim-binary
 
   test-sim-non-determinism:
     runs-on: ubuntu-latest
