feat: price-feeder telemetry (#382)
Co-authored-by: Aleksandr Bezobchuk <alexanderbez@users.noreply.github.com>

--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -35,3 +35,12 @@ pass = "keyringPassword"
 grpc_endpoint = "localhost:9090"
 rpc_timeout = "100ms"
 tmrpc_endpoint = "http://localhost:26657"
+
+[telemetry]
+service_name = "price-feeder"
+enabled = true
+enable_hostname = true
+enable_hostname_label = true
+enable_service_label = true
+type = "prometheus"
+global_labels = [["chain-id", "umee-local-beta-testnet"]]
