--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -7,7 +7,7 @@ on:
       - '**'
 jobs:
   publish:
-    if: github.ref == 'refs/heads/main' || github.event.label.name == 'enable.publishimage'
+    if: github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'enable.publishimage')
     name: Publish Docker, GCP
     runs-on: ubuntu-latest
 
