--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -1,7 +1,7 @@
 name: Images
 on:
   pull_request:
-    types: [ labeled ]
+    types: [ labeled, opened, reopened, synchronize ]
   push:
     branches:
       - '**'
