try to filter events more effectively

--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -1,10 +1,10 @@
 name: Images
 on:
   pull_request:
-    types: [ labeled, opened, reopened, synchronize ]
+    types: [ labeled, opened, synchronize ]
   push:
     branches:
-      - '**'
+      - main
 jobs:
   publish:
     if: github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'Enable:ImagePublish')
