update codeowners for /infra/ folder to dreamcodez

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,3 +5,6 @@
 
 # Primary repo maintainers
 *       @alexanderbez @toteki @adamewozniak @facundomedica
+
+# Infrastructure & devops maintainers
+/infra/ @dreamcodez
