--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -68,4 +68,8 @@ jobs:
       - name: test-sim-multi-seed-short
         run: |
           make test-sim-multi-seed-short
-        if: env.GIT_DIFF
+        # TODO: We disable multi-seed simulations due to the gravity bridge.
+        #
+        # Ref: https://github.com/umee-network/umee/issues/389
+        if: ${{ false }}
+        # if: env.GIT_DIFF
