--- a/infra/packer/Dockerfile.build
+++ b/infra/packer/Dockerfile.build
@@ -27,7 +27,7 @@ COPY tests/ tests/
 COPY x/ x/
 
 # Build umeed
-RUN make build
+RUN UMEE_ENABLE_BETA=true make build
 
 # Build price-feeder
 WORKDIR /tmp/build/umee/price-feeder
