--- a/infra/packer/Dockerfile.build
+++ b/infra/packer/Dockerfile.build
@@ -1,8 +1,7 @@
 FROM ubuntu:20.04
 
 # Install system dependencies
-RUN apt update \
-  && sleep 5 \
+RUN apt-get update \
   && apt install -y --no-install-recommends \
     ca-certificates \
     curl \
