build: improvements in image building reliability (#428)
* use mirrors.edge.kernel.org instead of builtin apt source to see if is more reliable in ci

* more backslashes needed for escapes here

* use 20.04 family ref instead of a specific past build for ubuntu focal (docker)

* add a sleep 5 after each apt update this way we avoid a potential race condition

* add sleep after docker build update as well

* bump parallel builds back up to 2, see if we can do this with the sleep

* fix syntax error in hcl

* argh; fix a second syntax error in hcl

* try using apt-get update and see if it corrupts files less than apt update

* why not two consecutive apt-get updates ;]

* remove a sleep

* implement wild bash loop to work around apt inconsistency with large package list install :)

Co-authored-by: Adam Wozniak <29418299+adamewozniak@users.noreply.github.com>
Co-authored-by: Adam Moser <63419657+toteki@users.noreply.github.com>

--- a/infra/packer/Dockerfile.build
+++ b/infra/packer/Dockerfile.build
@@ -1,7 +1,7 @@
-FROM ubuntu:focal-20211006
+FROM ubuntu:20.04
 
 # Install system dependencies
-RUN apt update \
+RUN apt-get update \
   && apt install -y --no-install-recommends \
     ca-certificates \
     curl \
