--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   publish:
-    if: github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'Enable:ImagePublish')
+    if: github.head_ref == 'main' || startsWith(github.head_ref,'release/') || contains(github.event.pull_request.labels.*.name, 'Enable:ImagePublish')
+
     name: Publish Docker, GCP
     runs-on: ubuntu-latest
 
