--- a/networks/umeeverse-party-1/keplr-umee-config.json
+++ b/networks/umeeverse-party-1/keplr-umee-config.json
@@ -1,7 +1,7 @@
 {
-  "rpc": "https://rpc.orlo.umeetest-beta.network.umee.cc",
-  "rest": "https://api.orlo.umeetest-beta.network.umee.cc",
-  "chainId": "umeetest-beta",
+  "rpc": "https://rpc.biplosion.umeeverse-party-1.network.umee.cc",
+  "rest": "https://api.biplosion.umeeverse-party-1.network.umee.cc",
+  "chainId": "umeeverse-party-1",
   "chainName": "Umee",
   "bip44": {
     "coinType": 118
