--- a/networks/umeeverse-party-1/keplr-umee-config.json
+++ b/networks/umeeverse-party-1/keplr-umee-config.json
@@ -2,7 +2,7 @@
   "rpc": "https://rpc.biplosion.umeeverse-party-1.network.umee.cc",
   "rest": "https://api.biplosion.umeeverse-party-1.network.umee.cc",
   "chainId": "umeeverse-party-1",
-  "chainName": "Umee",
+  "chainName": "Umeeverse",
   "bip44": {
     "coinType": 118
   },
