--- a/networks/umeeverse-party-1/keplr-gaia-config.json
+++ b/networks/umeeverse-party-1/keplr-gaia-config.json
@@ -2,7 +2,7 @@
   "rpc": "https://rpc.sphaeralcea.gaia-umeeverse-party-1.network.umee.cc",
   "rest": "https://api.sphaeralcea.gaia-umeeverse-party-1.network.umee.cc",
   "chainId": "gaia-umeeverse-party-1",
-  "chainName": "Gaia (Umeeverse)",
+  "chainName": "gaia-umeeverse-party-1",
   "bip44": {
     "coinType": 118
   },
