--- a/networks/umeeverse-party-1/keplr-umee-config.json
+++ b/networks/umeeverse-party-1/keplr-umee-config.json
@@ -36,7 +36,7 @@
     "ibc-transfer",
     "no-legacy-stdTx"
   ],
-  "explorerUrlToTx": "https://explorer-git-stacks-umeeverse-party-1-umee.vercel.app/umee/tx/{txHash}",
+  "explorerUrlToTx": "https://explorer-git-stacks-umeeverse-party-1-umee.vercel.app/umeeverse-party-1/tx/{txHash}",
   "bech32Config": {
     "bech32PrefixAccAddr": "umee",
     "bech32PrefixAccPub": "umeepub",
