--- a/.github/workflows/price-feeder-release.yml
+++ b/.github/workflows/price-feeder-release.yml
@@ -38,7 +38,7 @@ jobs:
           workdir: price-feeder
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GORELEASER_CURRENT_TAG: price-feeder/${{ env.RELEASE_VERSION }}
+          GORELEASER_CURRENT_TAG: ${{ env.RELEASE_VERSION }}
       - name: Release
         uses: goreleaser/goreleaser-action@v2
         with:
@@ -47,4 +47,4 @@ jobs:
           workdir: price-feeder
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GORELEASER_CURRENT_TAG: price-feeder/${{ env.RELEASE_VERSION }}
+          GORELEASER_CURRENT_TAG: ${{ env.RELEASE_VERSION }}
