--- a/price-feeder/.goreleaser.yml
+++ b/price-feeder/.goreleaser.yml
@@ -17,7 +17,7 @@ builds:
     env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X github.com/umee-network/umee/price-feeder/cmd.Version={{ .Version }} -X github.com/umee-network/umee/price-feeder/cmd.Commit={{ .Commit }}
+      - -s -w -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X github.com/umee-network/umee/price-feeder/cmd.Version={{ replace .Version "price-feeder/" "price-feeder-" }} -X github.com/umee-network/umee/price-feeder/cmd.Commit={{ .Commit }}
     goos:
       - darwin
       - linux
@@ -32,7 +32,7 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-    name_template: "{{ .Binary }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    name_template: '{{ .Binary }}-{{ replace .Version "price-feeder/" "price-feeder-" }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     files:
       - README.md
 
@@ -40,10 +40,10 @@ release:
   github:
     owner: umee-network
     name: umee
-  name_template: "v{{.Version}}"
+  name_template: "{{.Tag}}"
 
 checksum:
-  name_template: SHA256SUMS-v{{.Version}}.txt
+  name_template: 'SHA256SUMS-{{ replace .Version "price-feeder/" "price-feeder-" }}.txt'
   algorithm: sha256
 
 snapshot:
