--- a/price-feeder/.goreleaser.yml
+++ b/price-feeder/.goreleaser.yml
@@ -28,17 +28,17 @@ builds:
 
 archives:
   - format: tar.gz
-    wrap_in_directory: "true"
+    wrap_in_directory: true
     format_overrides:
       - goos: windows
         format: zip
-    name_template: '{{ .Binary }}-{{ replace .Version "price-feeder/" "price-feeder-" }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+    name_template: '{{ replace .Version "price-feeder/" "price-feeder-" }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     files:
       - README.md
 
 release:
   disable: false
-  name_template: "price-feeder/v{{ .Tag }}"
+  name_template: "{{ .Tag }}"
 
 checksum:
   name_template: 'SHA256SUMS-{{ replace .Version "price-feeder/" "price-feeder-" }}.txt'
