--- a/.mergify.yml
+++ b/.mergify.yml
@@ -39,7 +39,7 @@ pull_request_rules:
   - name: Backport patches to the release/price-feeder/v0.1.x branch
     conditions:
       - base=main
-      - label=S:backport/price-feeder/v1.x.x
+      - label=S:backport/price-feeder/v0.1.x
     actions:
       backport:
         branches:
