--- a/.mergify.yml
+++ b/.mergify.yml
@@ -35,3 +35,12 @@ pull_request_rules:
       backport:
         branches:
           - release/v1.x.x
+
+  - name: Backport patches to the release/price-feeder/v0.1.x branch
+    conditions:
+      - base=main
+      - label=S:backport/price-feeder/v0.1.x
+    actions:
+      backport:
+        branches:
+          - release/price-feeder/v0.1.x
