--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -23,7 +23,7 @@ quote = "USD"
 
 [account]
 address = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
-chain_id = "umee-local-beta-testnet"
+chain_id = "umee-local-testnet"
 validator = "umeevaloper12tysz6mzrawenca2t3t7ltym4hfjj8a5upsn2k"
 
 [keyring]
@@ -36,10 +36,10 @@ rpc_timeout = "100ms"
 tmrpc_endpoint = "http://localhost:26657"
 
 [telemetry]
-service_name = "price-feeder"
-enabled = true
 enable_hostname = true
 enable_hostname_label = true
 enable_service_label = true
+enabled = true
+global_labels = [["chain-id", "umee-local-testnet"]]
+service_name = "price-feeder"
 type = "prometheus"
-global_labels = [["chain-id", "umee-local-beta-testnet"]]
