--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: technote-space/get-diff-action@v6.0.1
         with:
           PATTERNS: |
@@ -21,7 +21,7 @@ jobs:
   breakage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
       - uses: technote-space/get-diff-action@v6.0.1
         with:
           PATTERNS: |
