enable build tags badgerdb and rocksdb, get rid of CGO_ENABLED=0 to try to get ledger built in the binary statically as well

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,10 +14,9 @@ builds:
     binary: umeed
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
-      - -tags=netgo ledger
+      - -tags=badgerdb ledger netgo rocksdb
       - -trimpath
-    env:
-      - CGO_ENABLED=0
+      - -static
     ldflags:
       - -s -w -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X github.com/cosmos/cosmos-sdk/version.Name=umee -X github.com/cosmos/cosmos-sdk/version.AppName=umeed -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }} -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }} -X github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger -X github.com/tendermint/tendermint/version.TMCoreSemVer={{ .Env.TM_VERSION }}
     goos:
