Fixes proto-breaking check Migrated buf to v1 removes third_party from .gitignore Removing unused scripts

--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -15,10 +15,7 @@ jobs:
           PATTERNS: |
             **/**.proto
       - name: lint
-        run: |
-          go mod download github.com/cosmos/cosmos-sdk
-          go mod download github.com/cosmos/ibc-go/v2
-          make proto-lint
+        run: make proto-lint
         if: env.GIT_DIFF
 
   breakage:
