--- a/.github/workflows/price-feeder-release.yml
+++ b/.github/workflows/price-feeder-release.yml
@@ -15,6 +15,15 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.17
+      - name: Get Go Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/golangci-lint
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-cache-${{ hashFiles('**/go.sum') }}
+        if: env.GIT_DIFF
       # Parse 'v*.*.*' semantic version from 'price-feeder/v*.*.*' and save to
       # the $GITHUB_ENV environment variable.
       - name: Set env
