--- a/.github/workflows/simulations.yml
+++ b/.github/workflows/simulations.yml
@@ -21,6 +21,15 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.17
+      - name: Get Go Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/golangci-lint
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-cache-${{ hashFiles('**/go.sum') }}
+
       - name: Install runsim
         run: export GO111MODULE="on" && go install github.com/cosmos/tools/cmd/runsim@v1.0.0
       - uses: actions/cache@v3
@@ -41,6 +50,15 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      - name: Get Go Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/golangci-lint
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-cache-${{ hashFiles('**/go.sum') }}
+        if: env.GIT_DIFF
       - name: Test application non-determinism
         run: |
           make test-sim-non-determinism
@@ -60,6 +78,15 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      - name: Get Go Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/golangci-lint
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-cache-${{ hashFiles('**/go.sum') }}
+        if: env.GIT_DIFF
       - uses: actions/cache@v3
         with:
           path: ~/go/bin
